FEATURE-2: server side paging works, server side sorting comes later
