# user-ng/src/app/gen/model/models.ts
@@ -1,2 +1,3 @@
 export * from './modelError';
 export * from './user';
+export * from './userResponse';
