# user-ng/src/app/gen/model/userResponse.ts
@@ -1,0 +1,19 @@
+/**
+ * User Paradise API
+ * Appliuserion providing user paradise.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { User } from './user';
+
+
+export interface UserResponse { 
+    size: number;
+    items: Array<User>;
+}
+
